# fastapi-react-vibe-coding-template

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_SETUP.md  NOTES.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.cursor/rules/: rules.mdc
agent/: CODEBASE.md  CURRENT_TASK.md  DATABASE_CONFIG_EXAMPLES.md  ENV_ANALYSIS_AND_RECOMMENDATIONS.md  IMPROVED_SETTINGS_EXAMPLE.py  SCRATCHPAD.md  openapi.json
app/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
app/backend/migrations/: README.md  env.py
app/backend/migrations/versions/: 5af0e9386386_add_user_tables.py  6f62ca7fc2bc_add_relationship_between_user_and_.py  initial_migration.py
app/backend/src/backend/: api.py  database.py  db.py  dependencies.py  main.py  settings.py
app/backend/src/backend/services/auth/: __init__.py  fastapi_users.py  models.py  routes.py  schemas.py  service.py  utils.py
app/backend/src/backend/services/example_service/: routes.py  schemas.py  service.py
app/backend/src/backend/services/users/: __init__.py  models.py  routes.py  schemas.py  service.py  utils.py
app/backend/tests/: test_settings.py
app/frontend/: eslint.config.js  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
backend/: CONTRIBUTING.md  README.md  pyproject.toml
backend/tests/: test_settings.py
docs/agent/: plan.md  project.md
documents/: BACKEND_STRUCTURE.md  FRONTEND_STRUCTURE.md
frontend/: Dockerfile  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
tasks/: AUTH.md
(+39 files in other folders)
